--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -818,3 +818,84 @@ outbreak in Germany},
   journal={Journal of travel medicine},
   year={2020}
 }
+
+@article{gadarian2021partisanship,
+  title={Partisanship, health behavior, and policy attitudes in the early stages of the COVID-19 pandemic},
+  author={Gadarian, Shana Kushner and Goodman, Sara Wallace and Pepinsky, Thomas B},
+  journal={Plos one},
+  volume={16},
+  number={4},
+  pages={e0249596},
+  year={2021},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{barbieri2020italian,
+  title={Italian workers at risk during the COVID-19 epidemic},
+  author={Barbieri, Teresa and Basso, Gaetano and Scicchitano, Sergio},
+  journal={Bank of Italy Occasional Paper},
+  number={569},
+  year={2020}
+}
+
+@article{plohl2021modeling,
+  title={Modeling compliance with COVID-19 prevention guidelines: The critical role of trust in science},
+  author={Plohl, Nejc and Musil, Bojan},
+  journal={Psychology, Health \& Medicine},
+  volume={26},
+  number={1},
+  pages={1--12},
+  year={2021},
+  publisher={Taylor \& Francis}
+}
+
+@article{carozzi2020urban,
+  title={Urban density and COVID-19},
+  author={Carozzi, Felipe},
+  year={2020},
+  publisher={IZA discussion paper}
+}
+@article{pequeno2020air,
+  title={Air transportation, population density and temperature predict the spread of COVID-19 in Brazil},
+  author={Pequeno, Pedro and Mendel, Bruna and Rosa, Clarissa and Bosholn, Mariane and Souza, Jorge Luiz and Baccaro, Fabricio and Barbosa, Reinaldo and Magnusson, William},
+  journal={PeerJ},
+  volume={8},
+  pages={e9322},
+  year={2020},
+  publisher={PeerJ Inc.}
+}
+@article{cocskun2021spread,
+  title={The spread of COVID-19 virus through population density and wind in Turkey cities},
+  author={Co{\c{s}}kun, Hamit and Y{\i}ld{\i}r{\i}m, Nazmiye and G{\"u}nd{\"u}z, Samettin},
+  journal={Science of the Total Environment},
+  volume={751},
+  pages={141663},
+  year={2021},
+  publisher={Elsevier}
+}
+@article{kadi2020population,
+  title={Population density, a factor in the spread of COVID-19 in Algeria: statistic study},
+  author={Kadi, Nadjat and Khelfaoui, Mounia},
+  journal={Bulletin of the National Research Centre},
+  volume={44},
+  number={1},
+  pages={1--7},
+  year={2020},
+  publisher={Springer}
+}
+
+@article{indseth2020covid,
+  title={COVID-19 among immigrants in Norway, notified infections, related hospitalizations and associated mortality: A register-based study},
+  author={Indseth, Thor and Gr{\o}sland, Mari and Arnesen, Trude and Skyrud, Katrine and Kl{\o}vstad, Hilde and Lamprini, Veneti and Telle, Kjetil and Kj{\o}llesdal, Marte},
+  journal={Scandinavian Journal of Public Health},
+  pages={1403494820984026},
+  year={2020},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@misc{wildman2020religion,
+  title={Religion and the COVID-19 pandemic},
+  author={Wildman, Wesley J and Bulbulia, Joseph and Sosis, Richard and Schjoedt, Uffe},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
