--- a/tex_files/my-thesis-setup.tex
+++ b/tex_files/my-thesis-setup.tex
@@ -11,11 +11,11 @@
 % **************************************************
 % Information and Commands for Reuse
 % **************************************************
-\newcommand{\thesisTitle}{The Clean Thesis Style}
+\newcommand{\thesisTitle}{Something something Corona}
 \newcommand{\thesisName}{Ricardo Langner}
 \newcommand{\thesisSubject}{Documentation}
-\newcommand{\thesisDate}{June 21, 2016}
-\newcommand{\thesisVersion}{My First Draft}
+\newcommand{\thesisDate}{June 21, 2021}
+\newcommand{\thesisVersion}{Final version}
 
 \newcommand{\thesisFirstReviewer}{Jane Doe}
 \newcommand{\thesisFirstReviewerUniversity}{\protect{Clean Thesis Style University}}
