--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -899,3 +899,14 @@ outbreak in Germany},
   year={2020},
   publisher={Taylor \& Francis}
 }
+
+@article{craney2002model,
+  title={Model-dependent variance inflation factor cutoff values},
+  author={Craney, Trevor A and Surles, James G},
+  journal={Quality Engineering},
+  volume={14},
+  number={3},
+  pages={391--403},
+  year={2002},
+  publisher={Taylor \& Francis}
+}
